--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
         "build": "node scripts/build.js",
         "ls-lint": "ls-lint"
     },
-    "sideEffects": false,
     "husky": {
         "hooks": {
             "pre-commit": "ls-lint",
@@ -27,10 +26,19 @@
         "@ls-lint/ls-lint": "^1.9.2",
         "babel-loader": "^8.1.0",
         "chalk": "^4.1.0",
+        "css-loader": "^5.0.1",
+        "express": "^4.17.1",
         "html-webpack-plugin": "^4.5.0",
         "husky": "^4.3.0",
+        "mini-css-extract-plugin": "^1.3.0",
         "minimist": "^1.2.5",
+        "node-sass": "^5.0.0",
+        "sass-loader": "^10.0.5",
+        "style-loader": "^2.0.0",
+        "vue": "^2.6.12",
+        "vue-loader": "^15.9.5",
+        "vue-template-compiler": "^2.6.12",
         "webpack": "^5.4.0",
-        "webpack-dev-server": "^3.11.0"
+        "webpack-dev-middleware": "^4.0.2"
     }
 }
