--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "vue-loader": "^15.9.5",
         "vue-template-compiler": "^2.6.12",
         "webpack": "^5.4.0",
-        "webpack-dev-middleware": "^4.0.2"
+        "webpack-dev-middleware": "^4.0.2",
+        "webpack-hot-middleware": "^2.25.0"
     }
 }
