chore(yui): update package.json

--- a/packages/yui/package.json
+++ b/packages/yui/package.json
@@ -1,7 +1,7 @@
 {
     "name": "yui",
     "version": "0.0.0",
-    "description": "yui",
+    "description": "Yui - A Vue.js 3.0 UI library for Mobile",
     "main": "index.js",
     "module": "dist/index.js",
     "repository": {
@@ -10,8 +10,7 @@
         "directory": "packages/yui"
     },
     "keywords": [
-        "yui",
-        "toast"
+        "yui"
     ],
     "author": "yanxianping",
     "license": "MIT",
@@ -20,7 +19,7 @@
     },
     "homepage": "https://github.com/npm-uis/yui/tree/main/packages/yui",
     "dependencies": {
-        "@npm-yui/toast": "0.0.0",
-        "@npm-yui/switch": "0.0.0"
+        "@npm-yui/toast": "^0.0.0",
+        "@npm-yui/switch": "^0.0.0"
     }
 }
